# gfl-stc

./: Cargo.toml  README.md
scripts/: generate_table_definitions.py
src/: catchdata.rs  definitions.rs  error.rs  lib.rs  main.rs  named.rs  stc.rs  table.rs  value.rs
stc/: Cargo.toml
stc/src/: definitions.rs  error.rs  named.rs  table.rs  value.rs
stc2csv/: Cargo.toml
stc2csv/src/: main.rs
