[package]
name = "stc"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "stc"
required-features = ["termcolor", "pico-args"]

[dependencies]
termcolor = { version = "1.1", optional = true }
pico-args = { version = "0.4", optional = true, default-features = false }
byteorder = "1.3"
csv = "1.1"
flate2 = "1.0"
json = "0.12"
